# bot_for_render

./: README.md  bot.py  main.py  pyproject.toml
static/: style.css
static/js/: main.js
template/: index.html
